--- a/finishing.html
+++ b/finishing.html
@@ -168,7 +168,8 @@
                             <h1>Что входит в отделку</h1>
                         </div>
                         <div class="reviews__slider component__vue">
-                            <h3>Тут скоро будет "Что входит в отделку" на Vue</h3>
+                            <h3>Тут скоро будет "Что входит в отделку" на
+                                Vue</h3>
                         </div>
                     </div>
                 </div>
@@ -179,7 +180,8 @@
                         <div class="payment__cards-wrapper">
                             <div class="payment__cards">
                                 <div class="payment__card">
-                                    <div class="payment__title header__finishing-subtitle">
+                                    <div
+                                        class="payment__title header__finishing-subtitle">
                                         <h2>Ремонт под ключ</h2>
                                         <p>Создадим
                                             уют в вашем доме. Возьмём на себя
@@ -206,7 +208,8 @@
                                         alt="2">
                                 </div>
                                 <div class="payment__card">
-                                    <div class="payment__title header__finishing-subtitle">
+                                    <div
+                                        class="payment__title header__finishing-subtitle">
                                         <h2>Материнский капитал</h2>
                                         <p>Большое распространение получило
                                             использование государственного
@@ -221,6 +224,55 @@
                                                 src="./assets/img/ico/arrow_right.svg"
                                                 alt="arrow_right"></button>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="payment__mb">
+                <div class="container">
+                    <div class="payment__content">
+                        <div class="payment__cards-wrapper">
+                            <div class="payment__card-mb">
+                                <div class="payment__img header__finishing-img">
+                                    <img src="./assets/img/finishing/1.webp"
+                                        alt="1">
+                                </div>
+                                <div
+                                    class="payment__title header__finishing-subtitle">
+                                    <h2>Ремонт под ключ</h2>
+                                    <p>Создадим
+                                        уют в вашем доме. Возьмём на себя
+                                        все заботы. Тщательно разработаем
+                                        дизайн, рассчитаем стоимость,
+                                        закупим и доставим материалы, всё
+                                        спланируем и закончим в срок. В
+                                        стоимость входят материалы и
+                                        работы.</p>
+                                    <button class="main__btn">Узнать
+                                        стоимость <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
+                                </div>
+                            </div>
+                            <div class="payment__card-mb">
+                                <div class="payment__img header__finishing-img">
+                                    <img src="./assets/img/finishing/2.webp"
+                                        alt="2">
+                                </div>
+                                <div
+                                    class="payment__title header__finishing-subtitle">
+                                    <h2>Качественный результат</h2>
+                                    <p>Профессионалы своего дела. Здесь нет
+                                        случайных людей. Все мастера имеют
+                                        высокую квалификацию. Мы лично проверяем
+                                        кандидатов. Только лучшие мастера
+                                        допускаются к работе.</p>
+                                    <button class="main__btn">Узнать
+                                        стоимость <img
+                                            src="./assets/img/ico/arrow_right.svg"
+                                            alt="arrow_right"></button>
                                 </div>
                             </div>
                         </div>
@@ -405,6 +457,62 @@
 
         </main>
         <footer>
+            <section class="footer footer__mb">
+                <div class="container">
+                    <div class="footer__content">
+                        <div class="footer__head">
+                            <div class="footer__block">
+                                <div class="footer__logo">
+                                    <a href="./index.html"><img
+                                            src="./assets/img/logo_big.svg"
+                                            alt="logo"></a>
+                                    <p>
+                                        © 2007 – 2024 COTTAGE POSELKI
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer__head">
+                            <div class="footer__block footer__menu">
+                                <p>Навигация</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Главная</a></li>
+                                        <li><a href="#">Коттеджи</a></li>
+                                        <li><a href="#">Генплан</a></li>
+                                        <li><a href="#">Видео-обзоры</a></li>
+                                        <li><a href="#">Отзывы</a></li>
+                                        <li><a href="#">Контакты</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <div class="footer__block footer__menu">
+                                <p>Посёлки</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Новое
+                                                Воскресенское</a></li>
+                                        <li><a href="#">Воскресенское-2</a></li>
+                                        <li><a href="#">Воскресенское</a></li>
+                                        <li><a href="#">Буковая аллея</a></li>
+                                        <li><a href="#">Полесье</a></li>
+                                        <li><a href="#">Родинки</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <div class="footer__body footer__body-mb">
+                            <div class="footer__block">
+                                <p>Информация на сайте не является публичной
+                                    офертой</p>
+                            </div>
+                            <div class="footer__block footer__link">
+                                <a href="#">Политика конфиденциальности</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="footer">
                 <div class="container">
                     <div class="footer__content">
@@ -447,7 +555,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="footer__body">
+                        <div class="footer__body footer__body-mb">
                             <div class="footer__block">
                                 <p>Информация на сайте не является публичной
                                     офертой</p>
