--- a/mortgage.html
+++ b/mortgage.html
@@ -398,6 +398,62 @@
             </section>
         </main>
         <footer>
+            <section class="footer footer__mb">
+                <div class="container">
+                    <div class="footer__content">
+                        <div class="footer__head">
+                            <div class="footer__block">
+                                <div class="footer__logo">
+                                    <a href="./index.html"><img
+                                            src="./assets/img/logo_big.svg"
+                                            alt="logo"></a>
+                                    <p>
+                                        © 2007 – 2024 COTTAGE POSELKI
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer__head">
+                            <div class="footer__block footer__menu">
+                                <p>Навигация</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Главная</a></li>
+                                        <li><a href="#">Коттеджи</a></li>
+                                        <li><a href="#">Генплан</a></li>
+                                        <li><a href="#">Видео-обзоры</a></li>
+                                        <li><a href="#">Отзывы</a></li>
+                                        <li><a href="#">Контакты</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <div class="footer__block footer__menu">
+                                <p>Посёлки</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Новое
+                                                Воскресенское</a></li>
+                                        <li><a href="#">Воскресенское-2</a></li>
+                                        <li><a href="#">Воскресенское</a></li>
+                                        <li><a href="#">Буковая аллея</a></li>
+                                        <li><a href="#">Полесье</a></li>
+                                        <li><a href="#">Родинки</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <div class="footer__body footer__body-mb">
+                            <div class="footer__block">
+                                <p>Информация на сайте не является публичной
+                                    офертой</p>
+                            </div>
+                            <div class="footer__block footer__link">
+                                <a href="#">Политика конфиденциальности</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="footer">
                 <div class="container">
                     <div class="footer__content">
@@ -440,7 +496,7 @@
                                 </nav>
                             </div>
                         </div>
-                        <div class="footer__body">
+                        <div class="footer__body footer__body-mb">
                             <div class="footer__block">
                                 <p>Информация на сайте не является публичной
                                     офертой</p>
@@ -456,7 +512,7 @@
                 </div>
             </section>
         </footer>
-    </body>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="./assets/js/script.js"></script>
-</html>
+        </body>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+        <script src="./assets/js/script.js"></script>
+    </html>
