--- a/plots.html
+++ b/plots.html
@@ -89,8 +89,8 @@
                                         alt="ellipse"></a>
                                 <a href="#">Выбор по параметрам</a>
                                 <a href="#"><img
-                                    src="./assets/img/ico/ellipse.svg"
-                                    alt="ellipse"></a>
+                                        src="./assets/img/ico/ellipse.svg"
+                                        alt="ellipse"></a>
                                 <p>Участки</p>
                             </div>
                         </div>
@@ -106,7 +106,8 @@
                             <h1>Участки</h1>
                         </div>
                         <div class="parametrs__slider component__vue">
-                            <h3>Тут скоро будет выбор участков по параметрам на Vue</h3>
+                            <h3>Тут скоро будет выбор участков по параметрам на
+                                Vue</h3>
                         </div>
                     </div>
                 </div>
@@ -224,6 +225,66 @@
             </section>
         </main>
         <footer>
+            <section class="footer footer__mb">
+                <div class="container">
+                    <div class="footer__content">
+                        <div class="footer__head">
+                            <div class="footer__block">
+                                <div class="footer__logo">
+                                    <a href="./index.html"><img
+                                            src="./assets/img/logo_big.svg"
+                                            alt="logo"></a>
+                                    <p>
+                                        © 2007 – 2024 COTTAGE POSELKI
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer__head">
+                            <div class="footer__block footer__menu">
+                                <p>Навигация</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Главная</a></li>
+                                        <li><a href="#">Коттеджи</a></li>
+                                        <li><a href="#">Генплан</a></li>
+                                        <li><a
+                                                href="#">Видео-обзоры</a></li>
+                                        <li><a href="#">Отзывы</a></li>
+                                        <li><a href="#">Контакты</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                            <div class="footer__block footer__menu">
+                                <p>Посёлки</p>
+                                <nav>
+                                    <ul>
+                                        <li><a href="#">Новое
+                                                Воскресенское</a></li>
+                                        <li><a
+                                                href="#">Воскресенское-2</a></li>
+                                        <li><a
+                                                href="#">Воскресенское</a></li>
+                                        <li><a href="#">Буковая
+                                                аллея</a></li>
+                                        <li><a href="#">Полесье</a></li>
+                                        <li><a href="#">Родинки</a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                        <div class="footer__body footer__body-mb">
+                            <div class="footer__block">
+                                <p>Информация на сайте не является публичной
+                                    офертой</p>
+                            </div>
+                            <div class="footer__block footer__link">
+                                <a href="#">Политика конфиденциальности</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="footer">
                 <div class="container">
                     <div class="footer__content">
@@ -245,7 +306,8 @@
                                         <li><a href="#">Главная</a></li>
                                         <li><a href="#">Коттеджи</a></li>
                                         <li><a href="#">Генплан</a></li>
-                                        <li><a href="#">Видео-обзоры</a></li>
+                                        <li><a
+                                                href="#">Видео-обзоры</a></li>
                                         <li><a href="#">Отзывы</a></li>
                                         <li><a href="#">Контакты</a></li>
                                     </ul>
@@ -257,16 +319,19 @@
                                     <ul>
                                         <li><a href="#">Новое
                                                 Воскресенское</a></li>
-                                        <li><a href="#">Воскресенское-2</a></li>
-                                        <li><a href="#">Воскресенское</a></li>
-                                        <li><a href="#">Буковая аллея</a></li>
+                                        <li><a
+                                                href="#">Воскресенское-2</a></li>
+                                        <li><a
+                                                href="#">Воскресенское</a></li>
+                                        <li><a href="#">Буковая
+                                                аллея</a></li>
                                         <li><a href="#">Полесье</a></li>
                                         <li><a href="#">Родинки</a></li>
                                     </ul>
                                 </nav>
                             </div>
                         </div>
-                        <div class="footer__body">
+                        <div class="footer__body footer__body-mb">
                             <div class="footer__block">
                                 <p>Информация на сайте не является публичной
                                     офертой</p>
